--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@keystonejs/app-admin-ui": "^7.5.1",
     "@keystonejs/app-graphql": "^6.3.1",
     "@keystonejs/keystone": "^19.3.2",
-    "cross-env": "^7.0.3"
+    "cross-env": "^7.0.3",
+    "dotenv": "^8.2.0"
   }
 }
