--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@keystonejs/adapter-mongoose": "^11.2.1",
     "@keystonejs/app-admin-ui": "^7.5.1",
     "@keystonejs/app-graphql": "^6.3.1",
+    "@keystonejs/auth-password": "^6.1.1",
     "@keystonejs/keystone": "^19.3.2",
     "cross-env": "^7.0.3",
     "dotenv": "^8.2.0"
