--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@keystonejs/example-projects-blank",
+  "name": "headless-cms",
   "description": "A blank KeystoneJS starter project.",
   "private": true,
   "version": "5.0.20",
